force-app/main/default/objects/Lead/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <description>Used by growth for leads created by forms.</description>
    <label>utm content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>