force-app/main/default/objects/Lead/fields/utm_ext_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>utm_ext_campaign_id__c</fullName>
    <label>utm_ext_campaign_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>