force-app/main/default/objects/Lead/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <description>Used by growth for leads created by forms.</description>
    <label>utm term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>