force-app/main/default/objects/Lead/fields/Verification_Initiated_dt__c.field-meta.xml
<CustomField>
    <fullName>Verification_Initiated_dt__c</fullName>
    <label>Verification Initiated</label>
    <type>DateTime</type>
</CustomField>