force-app/main/default/objects/Lead/fields/Website_Visitor_Location__c.field-meta.xml
<CustomField>
    <fullName>Website_Visitor_Location__c</fullName>
    <description>Where the User is visiting our website from.</description>
    <label>Website Visitor Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>