force-app/main/default/objects/Lead/fields/Worked_telematics_providers_prev_detls__c.field-meta.xml
<CustomField>
    <fullName>Worked_telematics_providers_prev_detls__c</fullName>
    <label>Worked telematics providers prev detls</label>
    <type>TextArea</type>
</CustomField>