force-app/main/default/objects/Lead/fields/zoom_app__IsCreatedByZoomApp__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__IsCreatedByZoomApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreatedByZoomApp</label>
    <type>Checkbox</type>
</CustomField>