force-app/main/default/objects/Lead/recordTypes/Channel_Registration.recordType-meta.xml
<RecordType>
    <fullName>Channel_Registration</fullName>
    <active>true</active>
    <businessProcess>New Default Lead Process</businessProcess>
    <description>Lead record for channel registrations from Impartner (partner portal)</description>
    <label>Channel Registration</label>
</RecordType>