force-app/main/default/objects/Lead/recordTypes/Partner_Application.recordType-meta.xml
<RecordType>
    <fullName>Partner_Application</fullName>
    <active>true</active>
    <businessProcess>Partner Application</businessProcess>
    <description>A Lead record to capture the partner application request from the Webform</description>
    <label>Partner Application</label>
</RecordType>