force-app/main/default/objects/Lead/recordTypes/Standard_Lead.recordType-meta.xml
<RecordType>
    <fullName>Standard_Lead</fullName>
    <active>true</active>
    <businessProcess>New Default Lead Process</businessProcess>
    <description>Standard record type, not Channel Partner.</description>
    <label>Standard Lead</label>
</RecordType>