force-app/main/default/objects/Lead/validationRules/Convert_Qualified_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Convert_Qualified_Leads</fullName>
    <active>true</active>
    <description>Require &quot;Qualified&quot; leads to be converted</description>
    <errorConditionFormula>AND (ISPICKVAL(Status, &apos;Qualified&apos;), IsConverted = False)</errorConditionFormula>
    <errorMessage>Leads with &quot;Qualified&quot; status must be converted</errorMessage>
</ValidationRule>