force-app/main/default/objects/Lead/validationRules/Industrial_CAMs_Must_Populate_Industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Industrial_CAMs_Must_Populate_Industry</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name = &apos;Samsara Channel Account Managers&apos;,
    ISPICKVAL(Business_Unit__c, &apos;Industrial&apos;), 
    OR(ISPICKVAL(Industry, &apos;&apos;),
       AND(NOT(ISPICKVAL(Industry, &apos;Manufacturing&apos;)), 
           NOT(ISPICKVAL(Industry, &apos;Remote Infrastructure&apos;))
       )
    )
)</errorConditionFormula>
    <errorMessage>Industrial Channel Leads must be populated with an Industry value of either Manufacturing or Remote Infrastructure</errorMessage>
</ValidationRule>