force-app/main/default/objects/Lead/validationRules/Organization_Size_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Organization_Size_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Organization_Size__c))</errorConditionFormula>
    <errorMessage>Please set an Organization Size</errorMessage>
</ValidationRule>