force-app/main/default/objects/Lead/validationRules/Partner_Application_Name_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Application_Name_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $RecordType.DeveloperName = &quot;Partner_Application&quot;,
    OR(
        ISBLANK(FirstName),
        ISBLANK(LastName)
    )
)</errorConditionFormula>
    <errorMessage>Salutation, First Name, and Last Name are required fields.</errorMessage>
</ValidationRule>