force-app/main/default/objects/Lead/validationRules/Require_Country_and_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Country_and_State</fullName>
    <active>true</active>
    <errorConditionFormula>OR ( ISBLANK( Country ),
AND (Country = &quot;United States&quot;, ISBLANK( State ))
)</errorConditionFormula>
    <errorMessage>Required fields missing: Please update City / State in order to proceed. Further questions, contact partners@samsara.com</errorMessage>
</ValidationRule>