force-app/main/default/objects/Lead/validationRules/Source_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( LeadSource , &quot;&quot;)</errorConditionFormula>
    <errorMessage>Please enter a Lead Source</errorMessage>
</ValidationRule>