force-app/main/default/objects/Lead/listViews/ALL_Leads_GS_QA.listView-meta.xml
<ListView>
    <fullName>ALL_Leads_GS_QA</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Leads - GS QA</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>