force-app/main/default/objects/Lead/listViews/Channel_Denied_Leads.listView-meta.xml
<ListView>
    <fullName>Channel_Denied_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Partner_Program_Segment__c</columns>
    <columns>Denial_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>Channel Denied Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>