force-app/main/default/objects/Lead/listViews/Channel_Leads.listView-meta.xml
<ListView>
    <fullName>Channel_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Lead_Id_Copy__c</columns>
    <filterScope>Everything</filterScope>
    <label>Channel Pending Leads</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>