force-app/main/default/objects/Lead/listViews/Channel_Leads_2_0_Testing.listView-meta.xml
<ListView>
    <fullName>Channel_Leads_2_0_Testing</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Partner_Program_Segment__c</columns>
    <columns>Fleet_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>Channel Leads 2.0 [Testing]</label>
    <sharedTo>
        <role>Management</role>
    </sharedTo>
</ListView>