force-app/main/default/objects/Lead/listViews/DACH_Partner_Applications.listView-meta.xml
<ListView>
    <fullName>DACH_Partner_Applications</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.COUNTRY_CODE</field>
        <operation>equals</operation>
        <value>AT,DE,CH</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Partner_Application</value>
    </filters>
    <label>DACH: Partner Applications</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>