force-app/main/default/objects/Lead/listViews/Denied_Deal_Registrations.listView-meta.xml
<ListView>
    <fullName>Denied_Deal_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Partner_Account_lr__c</columns>
    <columns>Partner_Contact_lr__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Deal Reg Form</value>
    </filters>
    <label>Denied Deal Registrations</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>