force-app/main/default/objects/Lead/listViews/Energy.listView-meta.xml
<ListView>
    <fullName>Energy</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Last_Call__c</columns>
    <columns>Number_of_Calls__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Energy</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Attempting,Contact Established,Demo Scheduled</value>
    </filters>
    <label>Industry: Energy</label>
    <sharedTo></sharedTo>
</ListView>