force-app/main/default/objects/Lead/listViews/Food_Shipper_of_America.listView-meta.xml
<ListView>
    <fullName>Food_Shipper_of_America</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Number_of_Calls__c</columns>
    <columns>Last_Call__c</columns>
    <columns>Time_Since_Lead_Status_Change__c</columns>
    <filterScope>Mine</filterScope>
    <label>Food Shipper of America</label>
    <sharedTo></sharedTo>
</ListView>