force-app/main/default/objects/Lead/listViews/Inbound.listView-meta.xml
<ListView>
    <fullName>Inbound</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Number_of_Vehicles__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Last_Call__c</columns>
    <columns>Number_of_Calls__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Free Trial Request Form,Inbound call / email,Facebook Form</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New,Attempting,Contact Established,Demo Scheduled</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:45</value>
    </filters>
    <label>Inbound</label>
    <sharedTo></sharedTo>
</ListView>